--- a/environments.ini
+++ b/environments.ini
@@ -1651,4 +1651,88 @@ build_flags =
 ;  '-DsimplePublishing=true'
 custom_description = BLE Gateway using ethernet, requires PIO configuration
 custom_hardware = ThingPulse gateway single ESP32
+
+[env:esp32dev-rf-halaszk]
+platform = ${com.esp32_platform}
+board = esp32dev
+lib_deps =
+  ${com-esp32.lib_deps}
+  ${libraries.wifimanager32}
+  ${libraries.rc-switch}
+  ${libraries.ble}
+  ${libraries.decoder}
+;  ${libraries.rfWeatherStation}
+  ${libraries.esppilight}
+  ${libraries.newremoteswitch}
+build_flags =
+  ${com-esp32.build_flags}
+  '-DZgatewayRF="RF"'
+;  '-DZgatewayRF2="RF2"'
+  '-DZgatewayBT="BT"'
+  '-DGateway_Name="OMG_ESP32_RF"'
+  '-DZwebUI="WebUI"'
+;  '-DZgatewayWeatherStation="WeatherStation"'
+  '-DZgatewayPilight="Pilight"'
+  '-DZgatewayRF2="RF2"'
+board_build.partitions = esp32_4MB_LittleFS-327k.csv
+upload_protocol = espota
+upload_port = 192.168.1.246
+upload_flags =
+  --auth=OTAPASSWORD
+  --port=8266
+custom_description = RF / BL gateway using RCSwitch and WEBUI library
+
+[env:heltec-rtl_433-halaszk]
+platform = ${com.esp32_platform}
+board = heltec_wifi_lora_32_V2
+; ~/.platformio/packages/framework-arduinoespressif32/variants/.../pins_arduino.h
+board_build.partitions = min_spiffs.csv
+lib_deps =
+  ${com-esp.lib_deps}
+  ${libraries.wifimanager32}
+  ${libraries.ssd1306}
+  ${libraries.rtl_433_ESP}
+;  ${libraries.rc-switch}
+;  ${libraries.lora}
+;  ${libraries.ble}
+;  ${libraries.decoder}
+build_flags =
+  ${com-esp.build_flags}
+;  '-DZgatewayLORA="LORA"'
+;  '-DLORA_BAND=433E6'
+;  '-DZgatewayRF="RF"'
+;  ${dev-esp.build_flags}
+; *** OpenMQTTGateway Config ***
+  ;'-UZmqttDiscovery'          ; disables MQTT Discovery
+  '-DvalueAsATopic=true'       ; MQTT topic includes model and device
+;  '-DZgatewayBT="BT"'
+  '-DGateway_Name="OMG_heltec_rtl_433_ESP"'
+; *** OpenMQTTGateway Modules ***
+  '-DZgatewayRTL_433="rtl_433"'
+  '-DZradioSX127x="SX127x"'
+; *** ssd1306 Display Options ***
+  '-DZdisplaySSD1306="HELTEC_SSD1306"'
+ ; '-DLOG_TO_OLED=true'         ; Enable log to OLED
+;  '-DJSON_TO_OLED=true'
+;  '-DLOG_LEVEL_OLED=LOG_LEVEL_NOTICE'
+;  '-DDISPLAY_IDLE_LOGO=false'
+;  '-DDISPLAY_BRIGHTNESS=80'
+;  '-DDISPLAY_METRIC=false'
+;  '-DRTL_DEBUG=4'           ; rtl_433 verbose mode
+;  '-DRTL_VERBOSE=58'          ; LaCrosse TX141-Bv2, TX141TH-Bv2, TX141-Bv3, TX141W, TX145wsdth sensor
+;  '-DRAW_SIGNAL_DEBUG=true'   ; display raw received messages
+;  '-DMEMORY_DEBUG=true'   ; display memory usage information
+;  '-DDEMOD_DEBUG=true'  ; display signal debug info
+;	 '-DMY_DEVICES=true'		; subset of devices
+;  '-DPUBLISH_UNPARSED=true'   ; publish unparsed signal details
+;  '-DRSSI_THRESHOLD=12'         ; Apply a delta of 12 (default 9)
+;  '-DOOK_FIXED_THRESHOLD=0x50'  ; Inital OOK Threhold - Only for SX127X (default 5A)
+;  '-DAVERAGE_RSSI=5000'     ; Display RSSI floor ( Average of 5000 samples )
+;  '-DSIGNAL_RSSI=true'             ; Display during signal receive
+  '-DZwebUI="WebUI"'
+upload_protocol = espota
+upload_port = 192.168.1.141
+upload_flags =
+  --auth=OTAPASSWORD
+  --port=8266
   
